--- a/SP/Hw4/Hw4/App.xaml
+++ b/SP/Hw4/Hw4/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Hw4.App"
+﻿<Application x:Class="ExplorerApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Hw4"
+             xmlns:local="clr-namespace:ExplorerApp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
