--- a/SP/Hw4/Hw4/MainWindow.xaml
+++ b/SP/Hw4/Hw4/MainWindow.xaml
@@ -1,12 +1,20 @@
-﻿<Window x:Class="Hw4.MainWindow"
+﻿<Window x:Class="ExplorerApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Hw4"
+        xmlns:local="clr-namespace:ExplorerApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="MainWindow" Height="378" Width="656">
+    <Grid Margin="0,0,2,-2">
+        <DataGrid AutoGenerateColumns="False" Name="DataGridTest" CanUserAddRows="True" ItemsSource="{Binding TestBinding}" Margin="10,10,10,40" Grid.ColumnSpan="2" >
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Имя файла" IsReadOnly="True" Binding="{Binding Path=Name}" Width="100"></DataGridTextColumn>
+                <DataGridTextColumn Header="Дата создания" IsReadOnly="True"  Binding="{Binding Path=CreateDate}" Width="130"></DataGridTextColumn>
+                <DataGridTextColumn Header="Путь файла" IsReadOnly="True"  Binding="{Binding Path=FilePath}" Width="300"></DataGridTextColumn>
+                <DataGridTextColumn Header="Тип" IsReadOnly="True"  Binding="{Binding Path=FileType}" Width="90"></DataGridTextColumn>
+
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
